--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
    <title>(placeholder)</title>
 </head>
 <body>
-   <script src="scratchpad.js" type="text/javascript"></script>
+   <script src="scripts.js" type="text/javascript"></script>
 </body>
 </html>
