--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <title>(placeholder)</title>
 </head>
 <body>
+   <div class = 'red'></div>
    <script src="scripts.js" type="text/javascript"></script>
 </body>
 </html>
